@@ -1,35 +1,31 @@
 package org.example.plugin.main;
 
-import java.nio.file.Path;
 import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 import org.example.plugin.api.Plugin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
+@RequestMapping("/api/plugins")
 public class PluginController {
 
-  private final List<Plugin> plugins;
+  private final PluginLoader loader = new PluginLoader();
 
-  public PluginController() {
-    this.plugins = new PluginLoader().loadFromDirectory(Path.of("plugins"));
-  }
-
-  @GetMapping("/plugins")
+  @GetMapping
   public List<String> list() {
-    return plugins.stream().map(Plugin::id).toList();
+    return loader.loadAll().stream()
+        .map(Plugin::id)
+        .collect(Collectors.toList());
   }
 
-  @GetMapping("/greet/{pluginId}")
-  public String greet(@PathVariable String pluginId, @RequestParam(defaultValue = "World") String name) {
-    return plugins.stream()
-        .filter(p -> p.id().equals(pluginId))
-        .findFirst()
-        .orElseThrow(() -> new NoSuchElementException("No plugin: " + pluginId))
-        .greet(name);
+  @GetMapping("/{id}/run")
+  public String run(@PathVariable String id, @RequestParam(required = false) String input) {
+    return loader.findById(id)
+        .map(p -> p.execute(input))
+        .orElse("plugin not found: " + id);
   }
 }
-
